Update doc theme to use current logo
We switched to a new logo some time ago, but since the releases
repo uses a customized doc theme it still had the old logo in
the generated HTML output.

This patch keeps the custom theme, but just switches out the old
logo for the new one.

Change-Id: I368ec2e31055d279b5701cfbbec8a78111e73cb2

--- a/doc/source/_themes/releases/static/css/styles.css
+++ b/doc/source/_themes/releases/static/css/styles.css
@@ -73,7 +73,7 @@ tr.row-odd {
     }
 }
 a.navbar-brand {
-    background: url('../images/openstack-logo-full.png') left no-repeat;
+    background: url('../images/openstack-logo-full.svg') left no-repeat;
     height: 35px;
     width: 135px;
 }
@@ -84,7 +84,7 @@ a.navbar-brand {
         margin-top: 0;
     }
     a.navbar-brand {
-        background: url('../images/openstack-logo-vert.png') left no-repeat;
+        background: url('../images/openstack-logo-vert.svg') left no-repeat;
         margin-left: 0px !important;
         height: 54px;
         width: 59px;
