Add stein to docs landing page
Include stein in the index page list. This also adds support for
a "future" status since validation was add/changed since the
start of the last cycle.

Change-Id: Ie1fc997c1f5f0f3c6af1d048fcc4b25a4608e70f
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/doc/source/_themes/releases/series_status_table.tmpl
+++ b/doc/source/_themes/releases/series_status_table.tmpl
@@ -18,7 +18,7 @@
 {%- for series in data %}
    - * :doc:`{{ series['name'] }}/index`
      * {{ phase_link(series['status']) }}
-     * {{ series['initial-release'] }} {%- if series['status'] == 'development' %} *estimated* :doc:`(schedule) <{{ series['name'] }}/schedule>`{%- endif %}
+     * {{ series['initial-release'] }} {%- if series['status'] in ['development', 'future'] %} *estimated* :doc:`(schedule) <{{ series['name'] }}/schedule>`{%- endif %}
      * {% if series['next-phase'] %}{{ phase_link(series['next-phase']['status']) }} *estimated {{ series['next-phase']['date'] }}*{% endif %}
      * {{ series.get('eol-date', '') }}
 {%- endfor %}
